--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/jpeg" href="/logo.jpeg" style="width: 20px; height: 20px;"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LANGI HOMES LTD Renovation Website</title>
+    <title>LANGI HOMES LTD | Reformas y Renovaciones Profesionales</title>
+    <meta name="description" content="Expertos en reformas y renovaciones en España. Mejora tu hogar con nuestros servicios profesionales de construcción y diseño. ¡Solicita presupuesto gratis!">
+    <meta name="keywords" content="reformas, renovaciones, construcción, diseño de interiores, España, Langi Homes">
+    <meta name="language" content="es">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://www.langihomes.es/">
+    <link rel="alternate" href="https://www.langihomes.es/" hreflang="es" />
   </head>
   <body>
     <div id="root"></div>
