textchanges spanish to english

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/jpeg" href="/logo.jpeg" style="width: 20px; height: 20px;"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LANGI HOMES LTD | Reformas y Renovaciones Profesionales</title>
-    <meta name="description" content="Expertos en reformas y renovaciones en España. Mejora tu hogar con nuestros servicios profesionales de construcción y diseño. ¡Solicita presupuesto gratis!">
-    <meta name="keywords" content="reformas, renovaciones, construcción, diseño de interiores, España, Langi Homes">
+    <title>LANGI HOMES LTD | Professional Renovations and Remodeling</title>
+    <meta name="description" content="Experts in renovations and remodeling in Spain. Improve your home with our professional construction and design services. Request a free quote!">
+    <meta name="keywords" content="renovations, remodeling, construction, interior design, Spain, Langi Homes">
     <meta name="language" content="es">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://www.langihomes.es/">
