--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 <!doctype html>
-<html lang="es">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/jpeg" href="/logo.jpeg" style="width: 20px; height: 20px;"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LANGI HOMES LTD | Professional Renovations and Remodeling</title>
-    <meta name="description" content="Experts in renovations and remodeling in Spain. Improve your home with our professional construction and design services. Request a free quote!">
-    <meta name="keywords" content="renovations, remodeling, construction, interior design, Spain, Langi Homes">
-    <meta name="language" content="es">
+    <meta name="description" content="Experts in Renovations and Remodeling in Spain. Improve Your Home with our Professional Construction and Design Services. Request a free quote!">
+    <meta name="keywords" content="Renovations, Remodeling, Construction, Interior Sesign, Spain, Langi Homes">
+    <meta name="language" content="en">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://www.langihomes.es/">
-    <link rel="alternate" href="https://www.langihomes.es/" hreflang="es" />
+    <link rel="alternate" href="https://www.langihomes.es/" hreflang="en" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-  </body>
-</html>
